fixed the grid gapping

--- a/notes-app/src/css/App.css
+++ b/notes-app/src/css/App.css
@@ -67,8 +67,9 @@ body {
     margin-top: 20px;
     box-sizing: border-box;
     display: grid;
-    grid-gap: 20px;
+    row-gap: 50px;
     box-sizing: border-box;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-content: start;
+    width: 80vw;
 }
